<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.seller_profile.SellerProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@color/white"
        android:focusableInTouchMode="true">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/subtitle0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="60dp"
            android:paddingBottom="6dp"
            android:text="@string/for_owner"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito"
            android:textSize="17sp"/>

        <EditText
            android:id="@+id/ufirstname"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@drawable/round_corner_hollow"
            android:hint="@string/owner_f_name"
            android:textColorLink="@color/black"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="19sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <EditText
            android:id="@+id/ulastname"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@drawable/round_corner_hollow"
            android:hint="@string/owner_l_name"
            android:textColorLink="@color/black"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="19sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <EditText
            android:id="@+id/uphno_owner"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@drawable/round_corner_hollow"
            android:hint="@string/owner_ph_no"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:inputType="number"
            android:maxLength="10"
            android:textColorLink="@color/black"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito"
            android:textSize="19sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="60dp"
            android:paddingBottom="6dp"
            android:text="@string/for_company"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito"
            android:textSize="17sp"/>

        <EditText
            android:id="@+id/ushopname"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@drawable/round_corner_hollow"
            android:hint="@string/shop_name"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColorLink="@color/black"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito"
            android:textSize="19sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <EditText
            android:id="@+id/ugstno"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@drawable/round_corner_hollow"
            android:hint="@string/GST_no"
            android:inputType="none"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColorLink="@color/black"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito"
            android:textSize="19sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <EditText
            android:id="@+id/uaddress"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@drawable/round_corner_hollow"
            android:hint="@string/address"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:inputType="textPostalAddress"
            android:textColorLink="@color/black"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito"
            android:textSize="19sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <EditText
            android:id="@+id/upincode"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@drawable/round_corner_hollow"
            android:hint="@string/pincode"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:inputType="number"
            android:maxLength="6"
            android:textColorLink="@color/black"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito"
            android:textSize="19sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <EditText
            android:id="@+id/uphno_company"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@drawable/round_corner_hollow"
            android:hint="@string/ph_no"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:inputType="number"
            android:maxLength="10"
            android:textColorLink="@color/black"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito"
            android:textSize="19sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"/>

        <EditText
            android:id="@+id/verifyemail"
            android:layout_marginTop="30dp"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:hint="@string/verifyemail"
            android:background="@drawable/sea_round_corner"
            android:textAlignment="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"/>
        <Button
            android:id="@+id/updateButton"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/updansave"
            android:textColor="@color/white"
            android:background="@drawable/round_corner"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>